Refactor footer and navbar links to be commented out; update global header sections in index and packages pages with descriptive text

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     </head>
     <body>
         <iframe src="components/navbar.html" class="navbar-frame" title="Navigation Bar"></iframe>
-         <!-- Global header section -->
+        <!-- Global header section -->
         <div class="global-header">
             <div class="global-header-bg"></div>
-            <h1 class="global-header-title">Homepage</h1>
+            <div class="global-header-content">
+                <h1 class="global-header-title">Homepage</h1>
+                <p class="global-header-desc">Welcome to Our Theme Park! Explore the best rides, delicious food, exciting shows, and more!</p>
+            </div>
         </div>
         
         <!-- make sure the class name will be like section-part name to prevent any compile issues-->
         <main class="section-container section-home">
-            <h1 class="header-home">Welcome to Our Theme Park!</h1>
-            <p>Explore the best rides, delicious food, exciting shows, and more!</p>
-
             <!-- Highlights/Features Section -->
             <div class="features-list">
                 <div class="feature-card">
