--- a/packages.html
+++ b/packages.html
@@ -12,13 +12,14 @@
     <!-- Global header section -->
     <div class="global-header">
         <div class="global-header-bg"></div>
-        <h1 class="global-header-title">Packages</h1>
+        <div class="global-header-content">
+            <h1 class="global-header-title">Packages</h1>
+            <p class="global-header-desc">Choose the perfect package for your adventure!</p>
+        </div>
     </div>
     
     <main>
         <section class="section-container scrollable-section">
-            <h2>Our Packages</h2>
-            <p>Choose the perfect package for your adventure!</p>
             <div class="packages-list">
                 <!-- Family Packages -->
                 <h3 class="package-group-title">Family Packages</h3>
