Add 'Ride' page with sections for various attractions; update navbar and styles for consistency

--- a/packages.html
+++ b/packages.html
@@ -24,6 +24,7 @@
                 <!-- Family Packages -->
                 <h3 class="package-group-title">Family Packages</h3>
                 <div class="package-card">
+                    <img src="img/global-header.jpg" alt="Family Fun Pack" class="package-img">
                     <h4>Family Fun Pack</h4>
                     <ul>
                         <li>4 Entry Tickets</li>
@@ -32,9 +33,12 @@
                         <li>Fast Track Access</li>
                     </ul>
                     <p class="price">$120</p>
-                    <button>Book Now</button>
+                    <div class="package-btn-wrap">
+                        <button>Book Now</button>
+                    </div>
                 </div>
                 <div class="package-card">
+                    <img src="img/global-header.jpg" alt="Kids' Day Out" class="package-img">
                     <h4>Kids' Day Out</h4>
                     <ul>
                         <li>1 Child Entry</li>
@@ -43,12 +47,15 @@
                         <li>Free Toy</li>
                     </ul>
                     <p class="price">$35</p>
-                    <button>Book Now</button>
+                    <div class="package-btn-wrap">
+                        <button>Book Now</button>
+                    </div>
                 </div>
 
                 <!-- Individu Packages -->
                 <h3 class="package-group-title">Individu Packages</h3>
                 <div class="package-card">
+                    <img src="img/global-header.jpg" alt="Adventure Seeker" class="package-img">
                     <h4>Adventure Seeker</h4>
                     <ul>
                         <li>Unlimited Rides</li>
@@ -57,9 +64,12 @@
                         <li>Priority Entry</li>
                     </ul>
                     <p class="price">$80</p>
-                    <button>Book Now</button>
+                    <div class="package-btn-wrap">
+                        <button>Book Now</button>
+                    </div>
                 </div>
                 <div class="package-card">
+                    <img src="img/global-header.jpg" alt="Solo Explorer" class="package-img">
                     <h4>Solo Explorer</h4>
                     <ul>
                         <li>1 Entry Ticket</li>
@@ -67,9 +77,12 @@
                         <li>Photo Pass</li>
                     </ul>
                     <p class="price">$40</p>
-                    <button>Book Now</button>
+                    <div class="package-btn-wrap">
+                        <button>Book Now</button>
+                    </div>
                 </div>
                 <div class="package-card">
+                    <img src="img/global-header.jpg" alt="Couple's Escape" class="package-img">
                     <h4>Couple's Escape</h4>
                     <ul>
                         <li>2 Entry Tickets</li>
@@ -78,12 +91,15 @@
                         <li>Complimentary Photos</li>
                     </ul>
                     <p class="price">$95</p>
-                    <button>Book Now</button>
+                    <div class="package-btn-wrap">
+                        <button>Book Now</button>
+                    </div>
                 </div>
 
                 <!-- Seasons Packages -->
                 <h3 class="package-group-title">Seasons Packages</h3>
                 <div class="package-card">
+                    <img src="img/global-header.jpg" alt="Summer Splash" class="package-img">
                     <h4>Summer Splash</h4>
                     <ul>
                         <li>Entry Ticket</li>
@@ -92,9 +108,12 @@
                         <li>Souvenir Towel</li>
                     </ul>
                     <p class="price">$60</p>
-                    <button>Book Now</button>
+                    <div class="package-btn-wrap">
+                        <button>Book Now</button>
+                    </div>
                 </div>
                 <div class="package-card">
+                    <img src="img/global-header.jpg" alt="Winter Wonderland" class="package-img">
                     <h4>Winter Wonderland</h4>
                     <ul>
                         <li>Entry Ticket</li>
@@ -103,9 +122,12 @@
                         <li>Photo with Santa</li>
                     </ul>
                     <p class="price">$65</p>
-                    <button>Book Now</button>
+                    <div class="package-btn-wrap">
+                        <button>Book Now</button>
+                    </div>
                 </div>
                 <div class="package-card">
+                    <img src="img/global-header.jpg" alt="Spring Bloom" class="package-img">
                     <h4>Spring Bloom</h4>
                     <ul>
                         <li>Entry Ticket</li>
@@ -114,7 +136,9 @@
                         <li>Photo Pass</li>
                     </ul>
                     <p class="price">$55</p>
-                    <button>Book Now</button>
+                    <div class="package-btn-wrap">
+                        <button>Book Now</button>
+                    </div>
                 </div>
             </div>
         </section>
