update image dina's

--- a/ride.html
+++ b/ride.html
@@ -22,17 +22,17 @@
                 <h2>SPLASH MANIA</h2>
                 <div class="ride-list">
                     <div class="ride-card">
-                        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="Roller Coaster">
+                        <img src="img/rollercoaster1.jfif.jpg" alt="Roller Coaster">
                         <h3>Roller Coaster</h3>
                         <p>High-speed loops and twists for adrenaline lovers.</p>
                     </div>
                     <div class="ride-card">
-                        <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Ferris Wheel">
+                        <img src="img/ferris wheel 1.jpeg.jpg" alt="Ferris Wheel">
                         <h3>Ferris Wheel</h3>
                         <p>Enjoy a relaxing ride with breathtaking views.</p>
                     </div>
                     <div class="ride-card">
-                        <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Water Slide">
+                        <img src="img/water slide 1.webp" alt="Water Slide">
                         <h3>Water Slide</h3>
                         <p>Cool down with our giant water slides and pools.</p>
                     </div>
@@ -43,12 +43,12 @@
                 <h2>ESCAPE PENANG</h2>
                 <div class="ride-list">
                     <div class="ride-card">
-                        <img src="https://images.unsplash.com/photo-1500534314209-a25ddb2bd429?auto=format&fit=crop&w=600&q=80" alt="Adventure Park">
+                        <img src="img/ferris wheel2.webp" alt="Adventure Park">
                         <h3>Adventure Park</h3>
                         <p>Thrilling outdoor challenges surrounded by nature.</p>
                     </div>
                     <div class="ride-card">
-                        <img src="https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=600&q=80" alt="Zip Line">
+                        <img src="img/ferris wheel 3.webp" alt="Zip Line">
                         <h3>Flying Lemur</h3>
                         <p>Fly through the treetops on our high zipline course.</p>
                     </div>
