--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,9 @@
                       <option value="other">Other</option>
                     </select>
 
+                    <label for="visit-date">Date of Visit</label>
+                    <input type="date" id="visit-date" name="visit_date">
+
                     <label for="message">Message</label>
                     <textarea id="message" name="message" rows="5" required placeholder="Type your message here..."></textarea>
 
