Add XML data and XSLT transformation for theme park packages

--- a/packages.html
+++ b/packages.html
@@ -228,6 +228,13 @@
                     </tr>
                 </tbody>
             </table>
+
+            <h2 class="packages-table-title">View Packages Table (XML/XSLT)</h2>
+            <p>
+                The table below is generated from <code>packages.xml</code> using <code>packages.xsl</code>.<br>
+                <a href="packages.xml" target="_blank">Open XML Table in New Tab</a>
+            </p>
+            <iframe src="packages.xml" width="100%" height="500" style="border:1px solid #ccc;"></iframe>
         </section>
     </main>
     <iframe src="components/footer.html" class="footer-frame" title="Footer"></iframe>
