--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Theme Park Home</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <button class="sidebar-toggle-btn" id="sidebarToggle" aria-label="Open sidebar">&#9776;</button>
+<head>
+  <meta charset="UTF-8">
+  <title>Contact Us - Theme Park</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <button class="sidebar-toggle-btn" id="sidebarToggle" aria-label="Open sidebar">&#9776;</button>
         <nav class="sidebar" id="sidebar">
         <button class="sidebar-close" id="sidebarClose" aria-label="Close sidebar">&times;</button>
         <ul style="margin-top: 40px;">
@@ -36,71 +36,148 @@
         </div>
         </nav>
         <div class="sidebar-overlay" id="sidebarOverlay"></div>
-        <iframe src="components/navbar.html" class="navbar-frame" title="Navigation Bar"></iframe>
-        
-        <main class="section-container section-contact">
-            <h2>Contact Us</h2>
-            <p>If you have any questions or feedback, please reach out to us! We’d love to hear from you.</p>
-            <div class="contact-content">
-                <form class="contact-form">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" required placeholder="Your Name">
 
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required placeholder="you@email.com">
+  <iframe src="components/navbar.html" class="navbar-frame" title="Navigation Bar"></iframe>
 
-                    <label for="subject">Subject / Topic</label>
-                    <select id="subject" name="subject" required>
-                      <option value="" disabled selected>-- Please select --</option>
-                      <option value="ticket">Ticket Issue</option>
-                      <option value="ride">Ride Information</option>
-                      <option value="feedback">General Feedback</option>
-                      <option value="accessibility">Accessibility</option>
-                      <option value="lost-found">Lost &amp; Found</option>
-                      <option value="other">Other</option>
-                    </select>
+  <!-- Global header section -->
+  <div class="global-header">
+    <div class="global-header-bg"></div>
+    <div class="global-header-content">
+      <h1 class="global-header-title">Contact</h1>
+      <p class="global-header-desc">We'd love to hear from you!</p>
+    </div>
+  </div>
 
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" rows="5" required placeholder="Type your message here..."></textarea>
+  <main class="section-container section-contact">
+    <h2>Contact Us</h2>
+    <p class="contact-intro">Have questions, suggestions, or feedback? We’d love to hear from you!</p>
 
-                    <button type="submit">Send Message</button>
-                </form>
-                <div class="contact-info">
-                    <h3>Contact Information</h3>
-                    <ul>
-                        <li><strong>Email:</strong> info@themepark.com</li>
-                        <li><strong>Phone:</strong> +60 12-345 6789</li>
-                        <li><strong>Address:</strong> 123 Theme Park Ave, Kuala Lumpur, Malaysia</li>
-                    </ul>
-                </div>
-            </div>
-        </main>
+    <div class="contact-content">
+      <form class="contact-form">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" required placeholder="Your Full Name">
 
-        <iframe src="components/footer.html" class="footer-frame" title="Footer"></iframe>
-        <script>
-            // Sidebar open/close logic
-            const sidebar = document.getElementById('sidebar');
-            const sidebarToggle = document.getElementById('sidebarToggle');
-            const sidebarClose = document.getElementById('sidebarClose');
-            const sidebarOverlay = document.getElementById('sidebarOverlay');
+        <label for="age">Age</label>
+        <input type="number" id="age" name="age" min="1" max="120" required>
 
-            function openSidebar() {
-                sidebar.classList.add('open');
-                sidebarOverlay.style.display = 'block';
-            }
-            function closeSidebar() {
-                sidebar.classList.remove('open');
-                sidebarOverlay.style.display = 'none';
-            }
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required placeholder="you@email.com">
 
-            sidebarToggle.addEventListener('click', openSidebar);
-            sidebarClose.addEventListener('click', closeSidebar);
-            sidebarOverlay.addEventListener('click', closeSidebar);
+        <label for="phone">Phone Number</label>
+        <input type="tel" id="phone" name="phone" placeholder="xxx-xxxxxxx">
 
-            // Optional: Close sidebar with ESC key
-            document.addEventListener('keydown', function(e) {
-                if (e.key === "Escape") closeSidebar();
-            });
-        </script>
-    </body>
+        <label for="themepark">Select Theme Park</label>
+        <select id="themepark" name="themepark" required>
+          <option value="">-- Please select --</option>
+          <option value="splash">Splash Mania</option>
+          <option value="escape">Escape Penang</option>
+          <option value="genting">Genting Skyworld</option>
+          <option value="sunway">Sunway Lagoon</option>
+        </select>
+
+        <label for="subject">Subject / Topic</label>
+        <select id="subject" name="subject" required>
+          <option value="" disabled selected>-- Please select --</option>
+          <option value="ticket">Ticket Issue</option>
+          <option value="ride">Ride Information</option>
+          <option value="feedback">General Feedback</option>
+          <option value="accessibility">Accessibility</option>
+          <option value="lost-found">Lost and Found</option>
+          <option value="other">Other</option>
+        </select>
+
+        <label for="visit-date">Date of Visit</label>
+        <input type="date" id="visit-date" name="visit_date">
+
+        <label for="satisfaction">Satisfaction (1-10)</label>
+        <input type="range" id="satisfaction" name="satisfaction" min="1" max="10">
+
+        <label for="referral">How did you hear about us?</label>
+        <select id="referral" name="referral">
+          <option value="">-- Select --</option>
+          <option value="social">Social Media</option>
+          <option value="search">Google Search</option>
+          <option value="friend">Friend/Family</option>
+          <option value="ad">Online Ad</option>
+          <option value="other">Other</option>
+        </select>
+
+        <label for="message">Your Message</label>
+        <textarea id="message" name="message" rows="5" required placeholder="Type your message here..."></textarea>
+
+        <button type="submit">Send Message</button>
+      </form>
+
+      <div class="contact-info">
+        <h3>Contact Information</h3>
+        <ul>
+          <li><strong>Email:</strong> info@themepark.com</li>
+          <li><strong>Phone:</strong> +60 12-345 6789</li>
+          <li><strong>Support Hours:</strong> Mon–Fri, 9am–6pm</li>
+        </ul>
+      </div>
+    </div>
+
+	<!-- Button to View XML Page -->
+	<a href="contact.xml" class="cta-button" target="_blank" style="margin-top: 20px; display: inline-block;">
+	  View Submitted Data
+	</a>
+
+  <iframe src="components/footer.html" class="footer-frame" title="Footer"></iframe>
+  
+	<script>
+	  const form = document.querySelector(".contact-form");
+
+	  form.addEventListener("submit", function(event) {
+		event.preventDefault(); // prevent actual form submission
+
+		// Collect form data
+		const formData = {
+		  name: form.name.value,
+		  age: form.age.value,
+		  email: form.email.value,
+		  phone: form.phone.value,
+		  themepark: form.themepark.value,
+		  subject: form.subject.value,
+		  visitdate: form["visit_date"].value,
+		  satisfaction: form.satisfaction.value,
+		  referral: form.referral.value,
+		  message: form.message.value
+		};
+
+		// Save as JSON string in localStorage
+		localStorage.setItem("contactData", JSON.stringify(formData));
+
+		alert("Your message has been saved locally!");
+
+		form.reset(); // optional: clear form
+	  });
+	</script>
+    <script>
+        // Sidebar open/close logic
+        const sidebar = document.getElementById('sidebar');
+        const sidebarToggle = document.getElementById('sidebarToggle');
+        const sidebarClose = document.getElementById('sidebarClose');
+        const sidebarOverlay = document.getElementById('sidebarOverlay');
+
+        function openSidebar() {
+            sidebar.classList.add('open');
+            sidebarOverlay.style.display = 'block';
+        }
+        function closeSidebar() {
+            sidebar.classList.remove('open');
+            sidebarOverlay.style.display = 'none';
+        }
+
+        sidebarToggle.addEventListener('click', openSidebar);
+        sidebarClose.addEventListener('click', closeSidebar);
+        sidebarOverlay.addEventListener('click', closeSidebar);
+
+        // Optional: Close sidebar with ESC key
+        document.addEventListener('keydown', function(e) {
+            if (e.key === "Escape") closeSidebar();
+        });
+    </script>
+
+</body>
 </html>
